test/corpus/datatables.txt
===
Datatables
===
Feature: DataTables

  Scenario: minimalistic
    Given a simple data table
      | foo | bar |
      | boz | boo |
    And a data table with a single cell
      | foo |
    And a data table with different fromatting
      |   foo|bar|    boz    |    
    And a data table with an empty cell
      |foo||boz|
    And a data table with comments and newlines inside
      | foo | bar |

      | boz  | boo  |
      # this is a comment
      | boz2 | boo2 |

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))))))
        (step
          (and_line
            (and_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))))))
        (step
          (and_line
            (and_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))))))
        (step
          (and_line
            (and_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col)
                (table_col
                  (table_cell))))))
        (step
          (and_line
            (and_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell)))
              (comment)
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))))))))))

===
Datatables With New Lines
===
Feature: DataTables

  Scenario: some whitespace is important
    Given 3 lines of poetry on 5 lines
      |  \nraindrops--\nher last kiss\ngoodbye.\n  |
    Given an example of negative space
      |        lost        i n        space        |

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))))))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))))))))))

===
Escaped Pipes
===
Feature: Escaped pipes
    The \-character will be considered as an escape in table cell
    iff it is followed by a |-character, a \-character or an n.

  Scenario: They are the future
    Given they have arrived
      | æ | o |
      | a | ø |
    Given they have arrived
      | \|æ\\n     | \o\no\  |
      | \\\|a\\\\n | ø\\\nø\\|

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context))
      (description_helper
        (description)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))))))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))))))))))

===
Extra Table Content
===
Feature: Extra table content
  Tables are delimited by pipes on both sides.
  Anything that isn't enclosed is not part of
  the table.

  It is not recommended to use this feature, but
  it is how the implementation currently works.

  Scenario: We're a bit extra
    Given a pirate crew
      | Luffy | Zorro | Doflamingo \
      | Nami  | Brook | BlackBeard

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context))
      (description_helper
        (description)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))
                (table_trailing)))))))))

===
Inconsistent Cell Count
===
Feature: Inconsistent cell counts

  Scenario: minimalistic
    Given a data table with inconsistent cell count
      | foo | bar |
      | boz | 


  Scenario Outline: minimalistic
    Given the <what>

  Examples: 
    | what       |
    | minimalism | extra |

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (step
          (given_line
            (given_kw)
            (context))
          (step_arg
            (data_table
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))))))))
    (scenario_definition
      (scenario
        (scenario_outline_line
          (scenario_outline_kw)
          (context))
        (step
          (given_line
            (given_kw)
            (context)))
        (examples_definition
          (examples
            (examples_line
              (examples_kw))
            (examples_table
              (table_head_row
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))
                (table_col
                  (table_cell))))))))))
