test/corpus/descriptions.txt
===
Descriptions
===
Feature: Descriptions everywhere
  This is a single line description

  Scenario: two lines
  This description
  has two lines and indented with two spaces
    Given the minimalism

Scenario: without indentation
This is a description without indentation
  Given the minimalism

  Scenario: empty lines in the middle
  This description

  has an empty line in the middle
    Given the minimalism

  Scenario: empty lines around

  This description
  has an empty lines around

    Given the minimalism

  Scenario: comment after description
  This description
  has a comment after

# this is a comment
    Given the minimalism

  Scenario: comment right after description
  This description
  has a comment right after
    #  this is another comment

    Given the minimalism

  Scenario: description with escaped docstring separator
  This description has an \"\"\" (escaped docstring sparator)

    Given the minimalism

  Scenario Outline: scenario outline with a description
This is a scenario outline description
    Given the minimalism

  Examples: examples with description
This is an examples description
    | foo |
    | bar |

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context))
      (description_helper
        (description)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description)
          (comment))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description)
          (comment))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (description_helper
          (description))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))))
    (scenario_definition
      (scenario
        (scenario_outline_line
          (scenario_outline_kw)
          (context))
        (description_helper
          (description))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (step_context))))
        (examples_definition
          (examples
            (examples_line
              (examples_kw)
              (context))
            (description_helper
              (description))
            (examples_table
              (table_head_row
                (table_col
                  (table_cell)))
              (table_row
                (table_col
                  (table_cell))))))))))
