test/corpus/minimal.txt
===
Empty
===

---

(document)

===
Minimal-example
===
Feature: Minimal

  Example: minimalistic
    Given the minimalism

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))))))

===
Minimal
===
Feature: Minimal

  Scenario: minimalistic
    Given the minimalism

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))))))
